# admatix

./: .env.example  .gitignore  AGENTS.md  README.md  _prompt.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
apps/api/: package.json
apps/cli/: package.json
apps/mcp-server/: README.md  package.json
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: data-dictionary.md
proof-dashboard/: .gitignore  DATA-SCHEMA.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: demo.ts  dispatch-wp.sh  doctor.ts  metrics.sh  orchestrator-prompt.md  orchestrator-tick.sh  python-services.mjs  scan-secrets.ts  seed-fixtures.ts  start-verifier.sh  stop-verifier.sh
services/backtests/: pyproject.toml
services/backtests/configs/: criteo-default.json  criteo-sample.json  hillstrom-default.json  phase4-gate.json
services/backtests/scripts/: run-phase4-backtests.sh
services/backtests/src/admatix_backtests/: __init__.py  __main__.py  common.py  criteo.py  hillstrom.py  refs.py  types.py
services/backtests/tests/: conftest.py  test_cli.py  test_criteo_smoke.py  test_determinism.py  test_hillstrom_smoke.py  test_license_boundary.py  test_phase4_gate_backtests.py  test_refs_completeness.py
services/benchmark/: README.md  RESULTS-SCHEMA.md  pyproject.toml  requirements.txt
services/benchmark/results/: decisions.json  scorecard.json
services/benchmark/src/admatix_benchmark/: __init__.py  cli.py  env.py  gate.py  leakage.py  metrics.py  runner.py  scenarios.py
services/benchmark/src/admatix_benchmark/buyer/: __init__.py  base.py  llm.py  policy_basic.py  policy_modern.py
services/benchmark/src/admatix_benchmark/skills/: basic.md  modern.md
services/benchmark/tests/: conftest.py  test_audit_repairs.py  test_buyer.py  test_cli_e2e.py  test_env.py  test_gate.py  test_metrics.py  test_runner.py
services/uplift/: pyproject.toml  requirements.txt
services/uplift/configs/: phase4-gate.json  placebo-default.json  placebo-gate.json  qini-criteo-sample.json  qini-criteo.json  qini-simulator.json
services/uplift/scripts/: run-phase4-placebo.sh
services/uplift/src/admatix_uplift/: __init__.py  __main__.py  _paths.py  grids.py  loaders.py  metrics.py  placebo.py  qini_criteo.py  qini_simulator.py  serialization.py  types.py
services/uplift/tests/: conftest.py  test_cli.py  test_determinism.py  test_license_boundary.py  test_loaders.py  test_phase4_gate_placebo.py  test_placebo_smoke.py  test_qini_criteo_smoke.py  test_qini_simulator_smoke.py
services/validation/: README.md  pyproject.toml  requirements.txt
services/validation/configs/: coverage-default.json  multiseed-default.json  phase4-gate.json  rmse-default.json  sbc-default.json
services/validation/scripts/: run-phase4-calibration.sh
services/validation/src/admatix_validation/: __init__.py  __main__.py  coverage.py  grids.py  multiseed.py  rmse_bias.py  sbc.py  types.py
services/validation/src/admatix_validation/reference_models/: __init__.py  pymc_cate.py
services/validation/tests/: conftest.py  test_cli.py  test_config_contract.py  test_coverage_smoke.py  test_determinism.py  test_missing_estimate_gates.py  test_multiseed_null_metrics.py  test_multiseed_smoke.py  test_phase4_gate_calibration.py  test_production_integration.py  test_rmse_bias_smoke.py  test_sbc_smoke.py  test_truth_target.py
services/validation/tests/fixtures/: coverage-tiny.json  multiseed-tiny.json  rmse-tiny.json  sbc-tiny.json
services/verifier/: .gitignore  README.md  pyproject.toml  requirements.txt
services/verifier/scripts/: smoke_uvicorn.sh
services/verifier/src/admatix_verifier/: __init__.py  __main__.py  app.py  loaders.py  models.py  select.py
services/verifier/src/admatix_verifier/methods/: __init__.py  bsts.py  cate.py  geo.py  guardrail.py  ope.py
services/verifier/tests/: conftest.py  test_api_contract.py  test_bsts.py  test_cate.py  test_coverage_on_simulator.py  test_geo.py  test_guardrail.py  test_method_validation.py  test_ope.py  test_placebo_zero.py  test_select.py
services/verifier/validation/: __init__.py  _common.py  bespoke_on_fixtures.py  bsts_analytic.py  fixtures.py  method_validation_results.json  ope_analytic.py  reference_on_fixtures.py  run_validation.py
services/verifier/validation/_fixtures/: _reference_bsts.json  _reference_ope.json
services/verifier/validation/scripts/: run_reference_comparison.sh
(+292 files in other folders)
