[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admatix-uplift"
version = "0.1.0"
description = "AdMatix uplift and placebo validation harness"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "AdMatix" }]
dependencies = [
  "numpy>=2.1,<2.2",
  "pandas>=2.2,<2.3",
  "scipy>=1.14,<1.17",
  "scikit-learn>=1.6,<1.8",
  "statsmodels>=0.14,<0.15",
  "econml==0.16.0",
  "causalml==0.16.0",
  "matplotlib>=3.9,<3.10",
  "pytest>=8.3,<9",
  "httpx>=0.27,<0.28",
]

[project.scripts]
admatix-uplift = "admatix_uplift.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = [
  "src",
  "../simulator/src",
  "../verifier/src",
  "../ingest/src",
]
markers = [
  "slow: production-sized placebo gate slice",
]
