[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admatix-validation"
version = "0.1.0"
description = "AdMatix research-grade validation harness (SBC, CI coverage, RMSE/bias, multi-seed)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "AdMatix" }]
dependencies = [
  "numpy>=2.1,<2.2",
  "pandas>=2.2,<2.3",
  "scipy>=1.14,<1.17",
  "statsmodels>=0.14,<0.15",
  "pymc>=5,<6",
  "arviz>=0.20,<0.21",
  "simuk",
  "matplotlib>=3.9,<4",
  "pytest>=8.3,<9",
  "fastapi>=0.115,<0.116",
  "uvicorn>=0.32,<0.33",
  "httpx>=0.27,<0.28",
]

[project.scripts]
admatix-validation = "admatix_validation.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: long-running gate tests (Phase 4 calibration slice)",
]
